# realest

./: .gitignore  README.md  docker-compose.yaml
nginx_setup/: nginx.conf
realest_scrap/: Dockerfile  README.md  pyproject.toml  scrapy.cfg  setup_scrapyd.sh
realest_scrap/realest_scrap/: middlewares.py  models.py  pipelines.py  settings.py
realest_scrap/realest_scrap/spiders/: __init__.py  apartments_spider.py  sreality_spider.py
realest_site/: .dockerignore  Dockerfile  README.md  manage.py  postgres_migrate.sh  pyproject.toml
realest_site/postings/: models.py  requests.py  urls.py  views.py
realest_site/postings/migrations/: 0001_initial.py
realest_site/postings/static/postings/: style.css
realest_site/postings/templates/postings/: detail.html  index.html
realest_site/realest_site/: asgi.py  settings.py  urls.py  wsgi.py
