[tool.poetry]
name = "realest-scrap"
version = "0.1.0"
description = "\"Demo project to scrap real estate postings\""
authors = ["Tadeas Uhlir <tadeas.uhlir@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.25"
scrapyd = "^1.4.3"
scrapyd-client = "^1.2.3"
scrapy = "^2.11.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
ipython = "^8.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
