[tool.poetry]
name = "realest_site"
version = "0.1.0"
description = "Django web-application for the realest scrapping project"
authors = ["Tadeas Uhlir <tadeas.uhlir@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
psycopg2 = "^2.9.9"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
